<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="web_client_id" translatable="false">63838831646-sj3u5ddt51413f2ccrlgbhr3mqu8tmln.apps.googleusercontent.com</string>
    <string name="app_name">Game</string>
    <string name="login_text">Đăng nhập</string>
    <string name="continue_email">Tiếp tục bằng email</string>
    <string name="or_text">Hoặc</string>
    <string name="continue_google">Tiệp tục với Google</string>
    <string name="email_address">Địa chỉ email*</string>
    <string name="password">Mật khẩu*</string>
    <string name="forgot_password"><u>Bạn đã quên mật khẩu?</u></string>
    <string name="create_account">Tạo một tài khoản</string>
    <string name="display_name">Tên hiển thị*</string>
    <string name="continue_text">Tiếp tục</string>
    <string name="text" translatable="false">Causual Game</string>
    <string name="text2">Trò chơi thông thường</string>
    <string name="play_text">Chơi</string>
    <string name="rank_text">Xếp hạng</string>
    <string name="new_chess_play_text">Bắt đầu ván cờ mới</string>
    <string name="play_with_ai_text">Đấu với máy</string>
    <string name="play_2_people_1_device_text">2 người 1 máy</string>
    <string name="time_text">Thời gian</string>
    <string name="super_flash_text">Siêu chớp</string>
    <string name="one_minute_text">1 phút</string>
    <string name="one_minute_plus_one_text" translatable="false">1 | 1</string>
    <string name="two_minute_plus_one_text" translatable="false">2 | 1</string>
    <string name="flash_text">Chớp</string>
    <string name="three_minute_text">3 phút</string>
    <string name="three_minute_plus_two_text" translatable="false">3 | 2</string>
    <string name="five_minute_text">5 phút</string>
    <string name="five_minute_plus_five_text" translatable="false">5 | 5</string>
    <string name="fast_text">Nhanh</string>
    <string name="ten_minute_text">10 phút</string>
    <string name="fifteen_minute_plus_ten" translatable="false">15 | 10</string>
    <string name="thirty_minute">30 phút</string>
    <string name="play_with_friend_offline_text">Chơi với bạn offline</string>
    <string name="white_piece_text">Quân trắng</string>
    <string name="black_piece_text">Quân đen</string>
    <string name="player_text">Đấu thủ</string>
    <string name="control_time_text">Điều khiển thời gian</string>
    <string name="rotate_board_text">Xoay bàn cờ</string>
    <string name="none_text">Không có</string>
    <string name="play_with_piece_text">CHƠI VỚI QUÂN</string>
    <string name="accept_policy_text">Tôi đã đọc và đồng ý với Điều khoản và chính sách Quyền riêng tư</string>
    <string name="setting_text">Cài đặt</string>
    <string name="account_text">Tài khoản của tôi</string>
    <string name="name_text">Tên</string>
    <string name="email_text" translatable="false">Email</string>
    <string name="delete_account_text">Xóa tài khoản</string>
    <string name="update_text">Cập nhật</string>
    <string name="detail_delete_action_text">Việc xóa tài khoản sẽ xóa vĩnh viễn tài khoản, trò chơi, thứ hạng của bạn. Không thể hoàn tác hành động này.</string>
    <string name="language_text">Ngôn ngữ</string>
    <string name="vietnamese_text">Tiếng Việt</string>
    <string name="english_text">Tiếng Anh</string>
    <string name="select_language_text">Chọn ngôn ngữ</string>
    <string name="logout_text">Đăng xuất</string>
    <string name="change_text">Sửa</string>
    <string name="volume_up_text">Bật âm thanh</string>
    <string name="volume_off_text">Tắt âm thanh</string>
    <string name="ranking_text" translatable="false">%1$d.</string>
    <string name="elo_text" translatable="false">%1$d</string>
    <string name="suggest_text">Gợi ý</string>
    <string name="takeback_text" translatable="false">Takeback</string>
    <string name="level_text">Độ khó</string>
    <string name="one_number_text" translatable="false">1</string>
    <string name="two_number_text" translatable="false">2</string>
    <string name="three_number_text" translatable="false">3</string>
    <string name="four_number_text" translatable="false">4</string>
    <string name="five_number_text" translatable="false">5</string>
    <string name="six_number_text" translatable="false">6</string>
    <string name="seven_number_text" translatable="false">7</string>
    <string name="eight_number_text" translatable="false">8</string>
    <string name="email_can_not_blank_text">Email không được để trống</string>
    <string name="password_can_not_blank">Mật khẩu không được để trống</string>
    <string name="name_can_not_blank_text">Tên không được để trống</string>
    <string name="pass_must_at_least_7_char_text">Mật khẩu phải có tối thiểu 7 ký tự</string>
    <string name="email_not_in_correct_format_text">Email không đúng định dạng</string>
    <string name="email_or_pass_invalid_text">Email hoặc mật khẩu không đúng</string>
    <string name="account_already_exists_text">Tài khoản đã tồn tại</string>
    <string name="history_text">Lịch sử</string>
    <string name="game_history_text">Lịch sử ván đấu</string>
    <string name="stockfish_text" translatable="false">Stockfish 17</string>
    <string name="stockfish_level_text">Stockfish cấp độ %1$d</string>
</resources>
