<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.MainActivity"
    android:background="@color/grey_900_94"
    android:paddingHorizontal="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/ten_minute_text"
        app:icon="@drawable/timer_24px"
        app:cornerRadius="4dp"
        android:elevation="4dp"
        android:backgroundTint="@color/grey_800"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_time"
        android:text="@string/new_chess_play_text"
        app:backgroundTint="@color/light_green_700"
        android:textSize="24dp"
        android:textStyle="bold"
        app:cornerRadius="4dp"
        android:elevation="4dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play_ai"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_new"
        app:icon="@drawable/monitor_24px"
        app:iconTint="@color/white"
        android:text="@string/play_with_ai_text"
        android:textColor="@color/white"
        app:backgroundTint="@color/grey_900_98"
        app:cornerRadius="4dp"
        android:elevation="4dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play_two"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_play_ai"
        app:icon="@drawable/group_24px"
        app:iconTint="@color/white"
        android:text="@string/play_2_people_1_device_text"
        android:textColor="@color/white"
        app:backgroundTint="@color/grey_900_98"
        app:cornerRadius="4dp"
        android:elevation="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
